<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newResourceName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/new_resource_name_label"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/newResourceTypeIcon"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/image_content_descriptor"
        tools:background="@drawable/ic_materials_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newResourceName" />

    <Switch
        android:id="@+id/newResourceTypeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"

        app:layout_constraintBottom_toBottomOf="@+id/newResourceTypeIcon"
        app:layout_constraintStart_toEndOf="@+id/newResourceTypeIcon"
        app:layout_constraintTop_toTopOf="@+id/newResourceTypeIcon" />

    <TextView
        android:id="@+id/newResourceTypeLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        tools:text="@string/material_label"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/newResourceTypeSwitch"
        app:layout_constraintStart_toEndOf="@+id/newResourceTypeSwitch"
        app:layout_constraintTop_toTopOf="@+id/newResourceTypeSwitch" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newResourceUnits"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/new_job_units_label"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="@+id/newResourcePrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/newResourcePrice"
        app:layout_constraintTop_toTopOf="@+id/newResourcePrice">

        <AutoCompleteTextView
            android:id="@+id/unitsDropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newResourcePrice"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/new_job_price_label"
        app:errorEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/newResourceUnits"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newResourceTypeIcon">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/createResourceButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/create_resource_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newResourcePrice" />

</androidx.constraintlayout.widget.ConstraintLayout>